@@ -1,3 +1,11 @@
+2008-05-09  Robert Millan  <rmh@aybabtu.com>
+
+	* util/biosdisk.c (linux_find_partition, get_os_disk): Handle Virtio
+	devices.
+	* util/grub-mkdevicemap.c (get_virtio_disk_name)
+	(make_device_map): Likewise.
+	Reported by Aurelien Jarno <aurel32@debian.org>
+
 2008-05-07  Ian Campbell  <ijc@hellion.org.uk>
 
 	* util/biosdisk.c (get_os_disk): Recognise xvd type disks.
